# advent-of-code

./: .gitignore
aoc-java/: pom.xml
aoc-java/src/main/java/org/aoc/: Main.java
aoc-java/src/main/java/org/aoc/model/: DynamicArray.java  Solution.java
aoc-java/src/main/java/org/aoc/model/year2024/: D1.java  D1P1.java  D1P2.java
aoc-java/src/test/java/org/aoc/model/year2024/: D1P1Test.java  D1P2Test.java  D1Test.java
aoc-python/: pyproject.toml
aoc-python/aoc_python/: day4.py  day5.py  day6.py  day7.py  main.py  model.py
aoc-python/aoc_python/model/: solutions.py
aoc-python/aoc_python/solutions/: day4.py
