[tool.poetry]
name = "aoc-python"
version = "0.1.0"
description = ""
authors = ["Austin Puia <puia.austin@gmail.com>"]
readme = "README.md"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
